[SPv175+] GraphicsLayer::SetNeedsCheckRasterInvalidation()

The flag for an GraphicsLayer is set when an object under the
GraphicsLayer
- has changed any paint property;
- may change paint properties relative to the GraphicsLayer (see
  https://chromium-review.googlesource.com/920658 which called
  SetNeedsRepaint for the non-composited fix-position case).
when the object's layer doesn't need repaint.

Bug: 816382
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I16bd6f0f3a8c2bc80005afe5de1cf67d83a28fb9
Reviewed-on: https://chromium-review.googlesource.com/939081
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539664}
Former-commit-id: 854a2f3135e02597cee6b211c25b9402976dd727